fix spacing in sidebar
when updating the grenade icons to use viewBoxes instead of width/height, i changed the height of the utility panel slightly, which threw off the spacing

--- a/src/stylus/sidebars.styl
+++ b/src/stylus/sidebars.styl
@@ -29,7 +29,7 @@
 	}
 
 	$economyHeight = 7.5rem
-	$utilityHeight = 7.598rem
+	$utilityHeight = 7.8rem
 
 	&:not(.--stats-active) .wrapper .economy,
 	&:not(.--utility-active) .wrapper .utility {
@@ -38,7 +38,7 @@
 	}
 
 	&:not(.--stats-active) .wrapper.--utility {
-		transform translateY(calc(100% + .4rem))
+		transform translateY(calc(100% + .2rem))
 	}
 
 	&:not(.--stats-active) .wrapper.--series-name > * {
